welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: not found: value ||
	if (n>=1 && n <= 10 && !(outsideMode)) || ((n<=1 || n >= 10) && outsideMode) {
                                               ^in1To10:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (n>=1 && n <= 10 && !(outsideMode)) || ((n<=1 || n >= 10) && outsideMode) {
        ^